Add two authors to RaptorX blog

--- a/website/blog/2021-02-04-raptorx.md
+++ b/website/blog/2021-02-04-raptorx.md
@@ -7,7 +7,7 @@ authorFBID: 100001087056694
 <div style="text-align: justify">
 
 
-**Facebook:** Amit Dutta, Baldeep Hira, Biswapesh Chattopadhyay, James Sun, Jialiang Tan, Ke Wang, Lin Liu, Naveen Cherukuri, Nikhil Collooru, Peter Na, Rohit Jain, Saksham Sachdev, Sergey Pershin, Shixuan Fan, Varun Gajjala
+**Facebook:** Abhinav Sharma, Amit Dutta, Baldeep Hira, Biswapesh Chattopadhyay, James Sun, Jialiang Tan, Ke Wang, Lin Liu, Naveen Cherukuri, Nikhil Collooru, Peter Na, Prashant Nema, Rohit Jain, Saksham Sachdev, Sergey Pershin, Shixuan Fan, Varun Gajjala
 
 **Alluxio:** Bin Fan, Calvin Jia, Haoyuan Li
 
