presto-credo blog

--- a/website/blog/2022-11-28-PrestoCon-2022.md
+++ b/website/blog/2022-11-28-PrestoCon-2022.md
@@ -12,16 +12,15 @@ The annual [PrestoCon](https://events.linuxfoundation.org/prestocon/) is coming 
 
 ## Top 5 reasons to attend PrestoCon 2022
 
-### 1.
-If you want to learn about Presto and its capabilities, there’s no better place to be than PrestoCon. This event is the only one of its kind that focuses exclusively on this powerful open source distributed SQL query engine for Lakehouses and data analytics. You’ll have the opportunity to learn from the experts who are using Presto every day in their companies, including Meta, Uber, Rippling, Twilio and more.
-### 2.
-You won’t want to miss the opportunity to network with some of the best data platform engineers and database software engineers in the industry. The conference is a great opportunity to meet new people and make connections that can help you advance your career.
-### 3.
-PrestoCon is a great way to stay up-to-date on the latest trends and developments in the database field. The conference features a variety of talks and presentations on the latest technology advancements in Presto and its ecosystem. So if you want to stay ahead of the curve, PrestoCon is definitely worth checking out!
-### 4.
-PrestoCon is an affordable way to improve your skillset. The conference tickets are surprisingly affordable, especially when you consider all that’s included- hands on workshops, technical deep dives, industry panels and lightning talks. So if you’re looking for an affordable way to improve your knowledge and skillset, PrestoCon is a great option!   
-### 5.
-Finally, PrestoCon is just a lot of fun! The conference provides a unique opportunity to learn about new technologies and meet new people. Plus, who doesn’t like checking out the one-of-a-kind Computer History Museum? If you’re looking for an enjoyable and informative experience, look no further than PrestoCon 2022!
+- 1.  If you want to learn about Presto and its capabilities, there’s no better place to be than PrestoCon. This event is the only one of its kind that focuses exclusively on this powerful open source distributed SQL query engine for Lakehouses and data analytics. You’ll have the opportunity to learn from the experts who are using Presto every day in their companies, including Meta, Uber, Rippling, Twilio and more.
+
+- 2.  You won’t want to miss the opportunity to network with some of the best data platform engineers and database software engineers in the industry. The conference is a great opportunity to meet new people and make connections that can help you advance your career.
+
+- 3. PrestoCon is a great way to stay up-to-date on the latest trends and developments in the database field. The conference features a variety of talks and presentations on the latest technology advancements in Presto and its ecosystem. So if you want to stay ahead of the curve, PrestoCon is definitely worth checking out!
+
+- 4. PrestoCon is an affordable way to improve your skillset. The conference tickets are surprisingly affordable, especially when you consider all that’s included- hands on workshops, technical deep dives, industry panels and lightning talks. So if you’re looking for an affordable way to improve your knowledge and skillset, PrestoCon is a great option!   
+
+- 5. Finally, PrestoCon is just a lot of fun! The conference provides a unique opportunity to learn about new technologies and meet new people. Plus, who doesn’t like checking out the one-of-a-kind Computer History Museum? If you’re looking for an enjoyable and informative experience, look no further than PrestoCon 2022!
 
 
 To register, just create a free account with The Linux Foundation:
